# TaskAppBackEnd

./: Dockerfile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
app/: main.py
app/api/routers/: auth.py  tasks.py
app/cruds/: auth.py  tasks.py
app/db/: database.py
app/db/migration/: env.py
app/db/migration/versions/: 140b7d67e2bc_end_date_to_deadline.py  26e6e7f3b659_create_tables.py  284715e54b13_create_tables.py  3e0818bb701e_create_tables.py  7b2ecae38f61_orm_mode_true.py  861b5d2083cb_create_tables.py  8ecf1c5a6b14_create_tables.py  ac68cf5a138c_create_tables.py  d5206fff803d_create_tables.py
app/models/: tasks.py
app/schemas/: auth.py  base_schema.py  tasks.py
